[package]
name = "maemio"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A high-performance in-memory database based on Cicada"

[dependencies]
# Core functionality
parking_lot = "0.12.3"     # More efficient locks than stdlib
crossbeam-utils = "0.8.21"  # Concurrent utilities
rand = "0.9.0"            # For random number generation
thiserror = "2.0.11"       # Error handling
uuid = { version = "1.13.1", features = ["v4"] }  # For generating unique IDs
num_cpus = "1.16.0"

# Logging and diagnostics
tracing = "0.1.41"         # Logging framework
tracing-subscriber = "0.3.19"  # Logging implementation

[dev-dependencies]
criterion = "0.5.1"       # For benchmarking
test-log = "0.2.17"       # For capturing logs in tests